log
Fri 23 Sep 2022 03:34:40 PM UTC: 
 tests:  1|8
total_score: 0/70
55f5b92
Fri 23 Sep 2022 03:57:13 PM UTC: 
 treemap.c | 35 ++++++++++++++++++++++++++++++++---
 1 file changed, 32 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:9: error: ‘true’ undeclared (first use in this function); did you mean ‘tree’?
   51 |   while(true){
      |         ^~~~
      |         tree
treemap.c:51:9: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:53:20: error: expected expression before ‘,’ token
   53 |       if (is_equal(,tree,tree->current->pair->key,key)) break;
      |                    ^
treemap.c:53:11: error: too many arguments to function ‘is_equal’
   53 |       if (is_equal(,tree,tree->current->pair->key,key)) break;
      |           ^~~~~~~~
treemap.c:22:5: note: declared here
   22 | int is_equal(TreeMap* tree, void* key1, void* key2){
      |     ^~~~~~~~
Compilation failed
9524f0d
Fri 23 Sep 2022 03:57:28 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:54:20: error: expected expression before ‘,’ token
   54 |       if (is_equal(,tree,tree->current->pair->key,key)) break;
      |                    ^
treemap.c:54:11: error: too many arguments to function ‘is_equal’
   54 |       if (is_equal(,tree,tree->current->pair->key,key)) break;
      |           ^~~~~~~~
treemap.c:23:5: note: declared here
   23 | int is_equal(TreeMap* tree, void* key1, void* key2){
      |     ^~~~~~~~
Compilation failed
d4046d3
Fri 23 Sep 2022 03:57:38 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
e6844ce
Fri 23 Sep 2022 04:04:35 PM UTC: 
 treemap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  8|6
total_score: 15/70
6c4cd0e
Fri 23 Sep 2022 04:07:46 PM UTC: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  13|5
total_score: 25/70
42020eb
